# rusty_json_api_template

./: Cargo.toml
src/: db.rs  main.rs  routes.rs
