[package]
name = "rest_api_kt_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
rusqlite = {version = "0.27", features = ["bundled"]}
r2d2 = "0.8"
r2d2_sqlite = "0.20.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
actix-cors = "0.6.4"
